# ghost-lang

./: .gitignore  ghost-lang.cabal  stack.yaml
example-programs/: LICENSE  README.md
example-programs/src/: CommonPatterns.gl
example-programs/src/Web/: Media.gl  Page.gl
ghost-api/: ghost-api.cabal
ghost-api/src/GhostLang/: API.hs
ghost-conduit/: README.md  ghost-conduit.cabal
ghost-conduit/src/GhostLang/: Conduit.hs
ghost-conduit/test/: Spec.hs
ghost-conduit/test/GhostLang/: ConduitProps.hs
ghost-lang/: README.md  ghost-lang.cabal
ghost-lang/src/: GhostLang.hs
ghost-lang/src/GhostLang/: Compiler.hs  InstructionSet.hs  Interpreter.hs  Intrinsic.hs  RuntimeState.hs  Serialize.hs  Types.hs
ghost-lang/src/GhostLang/Compiler/: Grammar.hs  Linker.hs  ModuleFileReader.hs  Tokenizer.hs
ghost-lang/src/GhostLang/Interpreter/: InstructionSet.hs  InterpreterM.hs  Intrinsic.hs  Random.hs  Scope.hs  WebClient.hs
ghost-lang/src/GhostLang/RuntimeState/: Counter.hs
ghost-lang/test/: Spec.hs
ghost-lang/test/GhostLang/: CommonGenerators.hs  InterpreterGenerators.hs  InterpreterMProps.hs  InterpreterProps.hs  InterpreterTests.hs  IntrinsicTests.hs  LinkerTests.hs  ParserGenerators.hs  ParserProps.hs  SerializationTests.hs  Stringify.hs
ghost-logger/: ghost-logger.cabal
ghost-logger/src/GhostLang/: .#GLog.hs  GLog.hs
ghost-node/: ghost-node.cabal
ghost-node/src/: Main.hs
ghost-node/src/GhostLang/: Node.hs
ghost-node/src/GhostLang/Node/: Flow.hs  IdGen.hs  State.hs
ghost-node/test/: Spec.hs
ghost-node/test/GhostLang/: FlowTests.hs
ghost-server/: ghost-server.cabal
ghost-server/src/: Main.hs
ghost-server/src/GhostLang/: Server.hs
ghost-shell/: README.md  ghost-shell.cabal
ghost-shell/src/: Command.hs  Documentation.hs  Main.hs  Shell.hs
src/: GhostLang.hs
src/GhostLang/: Compiler.hs  Counter.hs  Interpreter.hs  InterpreterM.hs  Intrinsic.hs  Linker.hs  Parser.hs  Scope.hs  Types.hs
src/GhostLang/Compiler/: Linker.hs  ModuleFileReader.hs
src/GhostLang/Parser/: Grammar.hs  Tokenizer.hs
test/: Spec.hs
test/GhostLang/: CommonGenerators.hs  Generators.hs  InterpreterGenerators.hs  InterpreterMProps.hs  InterpreterProps.hs  InterpreterTests.hs  IntrinsicTests.hs  LinkerTests.hs  ParserGenerators.hs  ParserProps.hs  SerializationTests.hs
