name:                ghost-lang
version:             0.1.0.0
synopsis:            Initia
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GhostLang
                       GhostLang.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ghost-shell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghost-lang
  default-language:    Haskell2010

test-suite ghost-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GhostLang.InterpreterTests
  build-depends:       base
                     , ghost-lang
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang
