name:                ghost-lang
version:             0.1.0.0
synopsis:            Initia
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

test-suite ghost-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GhostLang.InterpreterGenerators
                       GhostLang.InterpreterTests
                       GhostLang.InterpreterProps
                       GhostLang.ParserGenerators
                       GhostLang.SerializationTests
  build-depends:       base
                     , cereal
                     , directory
                     , ghost-lang
                     , filepath
                     , HUnit
                     , mtl
                     , parsec
                     , stm
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text
                     , QuickCheck
                     , unix
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

library
  hs-source-dirs:      src
  exposed-modules:     GhostLang
                       GhostLang.Counter
                       GhostLang.Interpreter
                       GhostLang.InterpreterM
                       GhostLang.Scope
                       GhostLang.Serialize
                       GhostLang.Types
                       GhostLang.Parser.Grammar
                       GhostLang.Parser.Tokenizer
  build-depends:       base >= 4.7 && < 5
                     , async
                     , cereal
                     , cereal-conduit
                     , conduit-combinators
                     , containers
                     , mtl
                     , parsec
                     , stm
                     , text
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ghost-shell
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ghost-lang
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang
