name:                ghost-conduit
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     GhostLang.Conduit
  build-depends:       base >= 4 && <5
                     , bytestring
                     , conduit
                     , random
                     , resourcet
                     , time
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite ghost-conduit-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       GhostLang.ConduitProps
  build-depends:       base >= 4 && <5
                     , ghost-conduit
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , QuickCheck
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O0

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang