name:                ghost-lang
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

test-suite ghost-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GhostLang.CommonGenerators
                       GhostLang.InterpreterGenerators
                       GhostLang.InterpreterTests
                       GhostLang.InterpreterProps
                       GhostLang.InterpreterMProps
                       GhostLang.IntrinsicTests
                       GhostLang.LinkerTests
                       GhostLang.SerializationTests
                       GhostLang.Stringify
  build-depends:       base >= 4 && < 5
                     , cereal
                     , directory
                     , ghost-lang
                     , ghost-logger
                     , filepath
                     , HUnit
                     , mtl
                     , parsec
                     , stm
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text
                     , time
                     , QuickCheck
                     , unix
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

library
  hs-source-dirs:      src
  exposed-modules:     GhostLang
                       GhostLang.Serialize
                       GhostLang.Types
                       GhostLang.Compiler
                       GhostLang.Compiler.Grammar
                       GhostLang.Compiler.Linker
                       GhostLang.Compiler.ModuleFileReader
                       GhostLang.Compiler.Tokenizer
                       GhostLang.Interpreter
                       GhostLang.Interpreter.InstructionSet
                       GhostLang.Interpreter.InterpreterM
                       GhostLang.Interpreter.Intrinsic
                       GhostLang.Interpreter.Scope
                       GhostLang.Interpreter.WebClient
                       GhostLang.RuntimeState
                       GhostLang.RuntimeState.Counter
  build-depends:       base >= 4 && < 5
                     , async
                     , bytestring
                     , cereal
                     , cereal-conduit
                     , conduit-combinators
                     , containers
                     , filepath
                     , ghost-logger
                     , http-client
                     , http-types
                     , mtl
                     , network
                     , parsec
                     , stm
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang
