name:                ghost-logger
version:             0.1.0.0
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     GhostLang.GLog
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , fast-logger
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang