name:                ghost-node
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ghost-node
  main-is:             Main.hs
  other-modules:       GhostLang.Node
                       GhostLang.Node.State
                       GhostLang.Node.IdGen
  build-depends:       base >= 4 && <5
                     , aeson
                     , bytestring
                     , containers
                     , fast-logger
                     , ghost-api
                     , ghost-lang
                     , http-types
                     , random
                     , stm
                     , text
                     , time
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang