name:                ghost-node
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ghost-node
  main-is:             Main.hs
  other-modules:       GhostLang.Node
                       GhostLang.Node.Flow
                       GhostLang.Node.State
                       GhostLang.Node.IdGen
  build-depends:       base >= 4 && <5
                     , aeson
                     , async
                     , bytestring
                     , containers
                     , ghost-api
                     , ghost-lang
                     , ghost-logger
                     , http-types
                     , random
                     , stm
                     , text
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

test-suite ghost-node-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       GhostLang.FlowTests
                       GhostLang.Node.Flow
                       GhostLang.Node.State
                       GhostLang.Node.IdGen
  build-depends:       base >= 4 && <5
                     , async
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , ghost-api
                     , ghost-lang
                     , ghost-logger
                     , HUnit
                     , random
                     , stm
                     , test-framework
                     , test-framework-hunit
                     , text
  hs-source-dirs:      test, src
  default-language:    Haskell2010
  ghc-options:         -Wall -O0

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang