name:                ghost-server
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ghost-server
  main-is:             Main.hs
  build-depends:       base >= 4 && <5
                     , bytestring
                     , http-types
                     , random
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang