name:                ghost-shell
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/kosmoskatten/ghost-lang
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ghost-shell
  main-is:             Main.hs
  other-modules:       Command
  build-depends:       base >= 4 && <5
                     , ghost-lang
                     , mtl
                     , parsec
                     , text
                     , stm
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

source-repository head
  type:     git
  location: https://github.com/kosmoskatten/ghost-lang